--- a/index.html
+++ b/index.html
@@ -8,28 +8,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+   <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.4/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.4/firebase-database.js"></script>
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script>
-      //Your web app's Firebase configuration
-      var firebaseConfig = {
-    apiKey: "AIzaSyBYV9kWljd-8zlRsYSLGIv2zBX4MhkNAo8",
-    authDomain: "multiplayer-car-racing-game.firebaseapp.com",
-    databaseURL: "https://multiplayer-car-racing-game.firebaseio.com",
-    projectId: "multiplayer-car-racing-game",
-    storageBucket: "",
-    messagingSenderId: "936147099930",
-    appId: "1:936147099930:web:dba47c5bb648f4ef"
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyA9h2xMqFBBQ-O1WqvCyjY1pLlYyv6enwM",
+    authDomain: "multiplayer-7dca0.firebaseapp.com",
+    databaseURL: "https://multiplayer-7dca0-default-rtdb.firebaseio.com",
+    projectId: "multiplayer-7dca0",
+    storageBucket: "multiplayer-7dca0.appspot.com",
+    messagingSenderId: "460631425106",
+    appId: "1:460631425106:web:f64979d906373abfec1f8b"
   };
-
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    </script>
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
